# locallibrary

./: README.md  manage.py  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_language_and_more.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: book_list.html
locallibrary/: settings.py  urls.py
