[tool.poetry]
name = "locallibrary"
version = "0.1.0"
description = "django tutorial"
authors = ["icehongssii12345 <icehongssii@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-admin = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
